--- a/public/css/dashboard/projectcordinator.css
+++ b/public/css/dashboard/projectcordinator.css
@@ -78,10 +78,11 @@
       margin-bottom: 40px;
       padding: 10px 20px;
       background-color: #ffffff;
-      color: rgb(22, 22, 22);
+      color:#1D5B79;
       font-size: 18px;
       border: none;
       border-radius: 5px;
+      font-weight: bold;
       cursor: pointer;
     }
     
@@ -138,9 +139,28 @@
       height: 180px;
       border-radius: 50%;
       background-color: #f1f6f8;
+      box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
       cursor: pointer;
     }
-    
+    .pro-field{
+      margin: 20px 5px 20px 60px;
+      color: #000000;
+        }
+    .pro-form{
+      background-color:rgba(255,255, 255, 0.2);
+      box-shadow: 5px 5px 5px 5px ;
+      width: 35%;
+      margin: 10px 0 0 300px;
+      padding: 5px 0 10px 0;
+    }
+    .proclose{
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+      color: #000000;
+     margin: 0 0 0 350px;
+    }
     .avatar-label i {
       font-size: 30px;
       color: #181818;
@@ -149,7 +169,12 @@
     .avatar-label:hover {
       background-color: #555;
     }
-    
+    .updatebtn{
+      background-color: #2591af;
+      padding: 5px 20px 5px 20px;
+      border-radius: 10px;
+      margin-left: 50px;
+    }
     
     .content {
       flex: 1;
@@ -267,7 +292,7 @@
     .username {
       text-align: center;
       color: #fff;
-      font-size: 20px;
+      font-size: 30px;
     }
     
 
