--- a/public/css/dashboard/projectcordinator.css
+++ b/public/css/dashboard/projectcordinator.css
@@ -38,9 +38,9 @@
     cursor: pointer;
   }
     
-    .container {
-      display: flex;
-    }
+    /* .container { */
+      /* display: flex; */
+    /* } */
     
     /* .sidebar {
       width: 300px;
