--- a/public/css/frontend/theme.css
+++ b/public/css/frontend/theme.css
@@ -2568,6 +2568,42 @@ input[type="button"].btn-block {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0; }
 
+      .input-group > .form-control1 {
+        border-radius: 10px;
+        position: relative;
+        flex: 1 1 auto;
+        width: 1%;
+        min-width: 0;
+        margin-bottom: 0;
+        border: none;
+        background-color: #fff;
+        color: #000;
+      }
+      .input-group-prepend > .input-group-text1{
+          background-color: #fff;
+          border-radius: 10px;
+      }
+      .mem{
+        margin-bottom: 20px;
+      }
+      .material-icons1{
+
+        font-family: 'Material Icons';
+font-weight: normal;
+font-style: normal;
+font-size: 24px;
+line-height: 1;
+letter-spacing: normal;
+text-transform: none;
+display: inline-block;
+white-space: nowrap;
+word-wrap: normal;
+direction: ltr;
+-moz-font-feature-settings: 'liga';
+margin-left: 1636%;
+      }
+    
+
 .input-group-prepend,
 .input-group-append {
   display: flex; }
@@ -3042,7 +3078,14 @@ input[type="button"].btn-block {
     margin-top: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0; }
-
+.dropdown.menu5{
+  margin-left: 90%;
+}
+.dropdown-menu.show {
+  display: block;
+  left: 100px;
+  margin-left: 650px!important;
+}
 .nav-pills .nav-link {
   border-radius: 0.25rem; }
 
